<resources>
    <string name="app_name">GetHandy</string>
    <string name="remember_me_str">Remember Me</string>
    <string name="login_str">Login</string>
    <string name="sign_up_str">Sign Up</string>
    <string name="password_str">Password</string>
    <string name="email_str">Email</string>
    <string name="first_name_str">First Name</string>
    <string name="last_name_str">Last Name</string>
    <string name="re_password_str">Re-enter password</string>
    <string name="business_str">Business</string>
    <string name="customer_str">Customer</string>
    <string name="home_str">Home</string>
    <string name="profile_str">Profile</string>
    <string name="history_str">History</string>
    <string name="favorites_str">Favorites</string>
    <string name="my_business_str">My Business</string>
    <string name="reviews_str">Reviews</string>
    <string name="phone_str">Phone</string>
    <string name="location_str">Location</string>
    <string name="update_str">Update</string>
    <string name="pick_image_str">Pick Image</string>
    <string name="welcome_str">Welcome</string>
    <string name="search_for_handyman_str">Search for handyman...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_details_str">More Details</string>
    <string name="details_str">Details</string>
    <string name="add_review_str">Add Review</string>
    <string name="date_str">Date</string>
    <string name="rating_str">Rating</string>
    <string name="add_str">Add</string>
    <string name="review_content_str">Review Content...</string>
    <string name="business_name">Name</string>
    <string name="business_profile_edit">Edit</string>
    <string name="owner_name">Owner Name</string>
    <string name="my_phone_number_business">My phone number</string>
    <string name="my_email_business">My email</string>
    <string name="my_location_business">My location</string>
    <string name="my_description_business">Description</string>
    <string name="desc_business">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis metus arcu, sed condimentum nisi feugiat sit amet. Fusce eget ante mi. Proin sagittis, magna vel auctor eleifend, massa velit convallis lorem, et hendrerit ex leo quis risus. Integer egestas libero dui, sed congue sapien ullamcorper sit amet. Vestibulum tincidunt orci congue augue efficitur condimentum. Sed sit amet arcu ultricies, congue justo sed, euismod enim. Nullam vehicula risus sit amet interdum elementum. Pellentesque euismod quam nec velit sodales tincidunt at eget augue. Suspendisse molestie faucibus leo at volutpat. Aenean tincidunt ultrices mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam quis ullamcorper tellus, ac accumsan tellus. Vestibulum ut fringilla eros.</string>
    <string name="working_hours">12:00 - 14:00</string>
    <string name="no_favorites_str">No favorites businesses yet...</string>
    <string name="business_name_edit">Business Name</string>
    <string name="start_hour">Start Hour</string>
    <string name="end_hour">End Hour</string>
    <string name="description">Description</string>
    <string name="no_reviews_str">No reviews yet...</string>
    <string name="no_history_str">No history yet...</string>
    <string name="no_reviews_yet">No Reviews Yet...</string>

</resources>