<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/customer_home"
        android:enabled="true"
        android:title="@string/home_str"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/customer_profile"
        android:enabled="true"
        android:title="@string/profile_str"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/customer_history"
        android:enabled="true"
        android:title="@string/history_str"
        android:icon="@drawable/ic_history"/>

    <item
        android:id="@+id/customer_favorites"
        android:enabled="true"
        android:title="@string/favorites_str"
        android:icon="@drawable/ic_favorites"/>
</menu>