<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/teal_200">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_EDT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_str"
                android:layout_marginTop="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_EDT_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password_str"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/login_CKB_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me_str"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_BTN_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_str"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_BTN_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_str"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>




</LinearLayout>