<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CustomerEditProfileActivity"
    android:scrollbars="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_EDT_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_str"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_EDT_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_str"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_EDT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_str"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_email"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_EDT_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_str"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_EDT_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_str"
                android:layout_marginTop="20dp"
                app:startIconDrawable="@drawable/ic_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/update_IMG_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_image"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_BTN_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_image_str"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_BTN_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_str"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/edit_profile_PGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>
</RelativeLayout>