<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Other.BusinessDetailsReviewsFragment"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/business_details_fragment_reviews_BTN_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_review_str"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/business_details_fragment_reviews_CHG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:singleSelection="true">
            <com.google.android.material.chip.Chip
                android:id="@+id/business_details_fragment_reviews_CHP_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/date_str"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/business_details_fragment_reviews_CHP_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/rating_str"/>
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/business_details_fragment_reviews_LBL_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_reviews_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="100dp"
            android:gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/business_details_fragment_reviews_RCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/business_details_fragment_reviews_PGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"/>
    </RelativeLayout>



</LinearLayout>