<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BusinessDetailsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:background="@color/teal_200"
        android:gravity="center">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            android:src="@drawable/ic_business"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Business Name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/business_details_TBL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_str"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_str"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_str"/>

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/business_details_FL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="5dp">

    </FrameLayout>

</LinearLayout>